<?xml version="1.0" encoding="utf-8"?>

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/permissions_fragment"
        android:name="com.t1000.capstone21.utils.CameraPermissions"
        android:label="@string/permm" >

        <action
            android:id="@+id/action_permissions_to_camera"
            app:destination="@id/photo_fragment"
            app:popUpTo="@id/permissions_fragment"
            app:popUpToInclusive="true" />

    </fragment>

    <fragment
        android:id="@+id/photo_fragment"
        android:name="com.t1000.capstone21.camera.photoFragment.PhotoFragment"
        android:label="@string/photo" >


        <action
            android:id="@+id/action_camera_to_permissions"
            app:destination="@id/permissions_fragment"
            app:popUpTo="@id/photo_fragment"
            app:popUpToInclusive="true"/>

        <action
            android:id="@+id/action_camera_to_video"
            app:destination="@id/video_fragment"
            app:popUpTo="@id/photo_fragment"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_photo_fragment_to_previewFragment"
            app:destination="@id/previewFragment" >

        </action>

    </fragment>

    <fragment
        android:id="@+id/video_fragment"
        android:name="com.t1000.capstone21.camera.videoFragment.VideoFragment"
        android:label="@string/video" >

        <action
            android:id="@+id/action_video_to_permissions"
            app:destination="@id/permissions_fragment"
            app:popUpTo="@id/video_fragment"
            app:popUpToInclusive="true"/>

        <action
            android:id="@+id/action_video_to_camera"
            app:destination="@id/photo_fragment"
            app:popUpTo="@id/video_fragment"
            app:popUpToInclusive="true"/>

        <action
            android:id="@+id/action_video_fragment_to_previewFragment"
            app:destination="@id/previewFragment"/>

    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.t1000.capstone21.ui.home.HomeFragment"
        android:label="@string/home2"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_commentFragment"
            app:destination="@id/commentFragment"
            app:launchSingleTop="false"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_navigation_home_to_profileFragment"
            app:destination="@id/profileFragment" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_me"
            app:destination="@id/navigation_me" />

    </fragment>

    <fragment
        android:id="@+id/navigation_post"
        android:name="com.t1000.capstone21.ui.post.PostFragment"
        android:label="@string/post"
        tools:layout="@layout/fragment_post" >
        <action
            android:id="@+id/action_navigation_post_to_permissions_fragment"
            app:destination="@id/permissions_fragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_me"
        android:name="com.t1000.capstone21.ui.me.MeFragment"
        android:label="@string/me"
        tools:layout="@layout/fragment_me" >
        <action
            android:id="@+id/action_navigation_me_to_loginUserFragment"
            app:destination="@id/loginUserFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_navigation_me_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_findFrind"
        android:name="com.t1000.capstone21.ui.searchUser.SearchUserFragment"
        android:label="@string/findFriend"
        tools:layout="@layout/search_user_fragment" >
        <action
            android:id="@+id/action_navigation_findFrind_to_profileFragment"
            app:destination="@id/profileFragment" />
        <argument
            android:name="userId"
            app:argType="string" />
    </fragment>


    <fragment
        android:id="@+id/navigation_index"
        android:name="com.t1000.capstone21.ui.chat.privateChat.ChatFragment"
        android:label="@string/chat"
        tools:layout="@layout/chat_fragment" >

        <action
            android:id="@+id/action_navigation_index_to_navigation_me"
            app:destination="@id/navigation_me" />
        <action
            android:id="@+id/action_navigation_index_to_contactFragment"
            app:destination="@id/contactFragment">
        </action>

        <argument
            android:name="chatReceivedId"
            app:argType="string"
            app:nullable="true" />

    </fragment>

    <fragment
        android:id="@+id/contactFragment"
        android:name="com.t1000.capstone21.ui.chat.contact.ContactFragment"
        android:label="@string/MyFriend">

        <action
            android:id="@+id/action_contactFragment_to_navigation_index"
            app:destination="@id/navigation_index" >
        </action>

        <argument
            android:name="senderId"
            app:argType="string"
            app:nullable="true" />

        <argument
            android:name="isFollowing"
            app:argType="boolean" />

    </fragment>

    <fragment
        android:id="@+id/loginUserFragment"
        android:name="com.t1000.capstone21.ui.me.register.LoginUserFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login_user" >
        <action
            android:id="@+id/action_loginUserFragment_to_registerUserFragment"
            app:destination="@id/registerUserFragment" />
        <action
            android:id="@+id/action_loginUserFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>

    <fragment
        android:id="@+id/registerUserFragment"
        android:name="com.t1000.capstone21.ui.me.register.RegisterUserFragment"
        android:label="Register"
        tools:layout="@layout/fragment_register_user" >
        <action
            android:id="@+id/action_registerUserFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.t1000.capstone21.ui.profile.ProfileFragment"
        android:label="@string/profile2"
        tools:layout="@layout/profile_fragment" >
    <argument
        android:name="currentUserId"
        app:argType="string"
        app:nullable="true" />
        <action
            android:id="@+id/action_profileFragment_to_followFragment"
            app:destination="@id/followFragment" />
        <action
            android:id="@+id/action_profileFragment_to_navigation_me"
            app:destination="@id/navigation_me" />
        <action
            android:id="@+id/action_profileFragment_to_videPostFragment"
            app:destination="@id/videPostFragment" />
        <action
            android:id="@+id/action_profileFragment_to_profileEditFragment"
            app:destination="@id/profileEditFragment" />

    </fragment>



    <dialog
        android:id="@+id/commentFragment"
        android:name="com.t1000.capstone21.ui.comment.CommentFragment"
        android:label="@string/comment"
        tools:layout="@layout/add_comment_chat_fragment" >
        <argument
            android:name="currentVideoId"
            app:argType="string"
            app:nullable="true" />

        <argument
            android:name="currentUserId"
            app:argType="string"
            app:nullable="true" />

        <action
            android:id="@+id/action_commentFragment_to_stickerFragment"
            app:destination="@id/stickerFragment" />
        <action
            android:id="@+id/action_commentFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
    </dialog>

    <dialog
        android:id="@+id/stickerFragment"
        android:name="com.t1000.capstone21.ui.sticker.StickerFragment"
        android:label="Sticker"
        tools:layout="@layout/sticker_fragment" >
        <argument
            android:name="currentVideoId"
            app:argType="string" />

        <argument
            android:name="currentUserId"
            app:argType="string" />

        <action
            android:id="@+id/action_stickerFragment_to_commentFragment"
            app:destination="@id/commentFragment"
            app:popUpTo="@+id/commentFragment"
            app:popUpToInclusive="true"/>


    </dialog>

    <fragment
        android:id="@+id/followFragment"
        android:name="com.t1000.capstone21.ui.follow.FollowFragment"
        android:label="Follow"
        tools:layout="@layout/follow_fragment" >

    <argument
        android:name="currentUserId"
        app:argType="string"
        app:nullable="true" />

        <argument
            android:name="isFollowing"
            app:argType="float" />
        <action
            android:id="@+id/action_followFragment_to_navigation_index"
            app:destination="@id/navigation_index" />
        <action
            android:id="@+id/action_followFragment_to_profileFragment"
            app:destination="@id/profileFragment" />

    </fragment>

    <fragment
        android:id="@+id/previewFragment"
        android:name="com.t1000.capstone21.camera.preview.PreviewFragment"
        android:label="Video Preview"
        tools:layout="@layout/preview_fragment">
        <argument
            android:name="savedUri"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/profileEditFragment"
        android:name="com.t1000.capstone21.ui.profile.edit.ProfileEditFragment"
        android:label="@string/profileEd"
        tools:layout="@layout/profile_edit_fragment" >
        <action
            android:id="@+id/action_profileEditFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>
    <fragment
        android:id="@+id/indexFragment"
        android:name="com.t1000.capstone21.ui.chat.homeChat.HomeMassageFragment"
        android:label="@string/index" />
    <fragment
        android:id="@+id/videPostFragment"
        android:name="com.t1000.capstone21.ui.profile.VidePostFragment"
        android:label="@string/vidPost" >
        <argument
            android:name="userId"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="videoId"
            app:argType="string"
            app:nullable="true" />
        <action
            android:id="@+id/action_videPostFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>
    <fragment
        android:id="@+id/musicFragment"
        android:name="com.t1000.capstone21.camera.musicFragment.MusicFragment"
        android:label="Music "
        tools:layout="@layout/music_fragment" />


</navigation>